# mimic

./: .gitattributes  Cargo.toml  README.md  README_DEV.md  ROADMAP.md  clean.sh  docker-compose.yml  run.sh  shell.nix
.github/workflows/: ci.yml  pre-release.yml  prepare-release.yml  release.yml
docker/: Dockerfile  entrypoint.sh
mimic-apply/: Cargo.toml
mimic-apply/src/: bootloader.rs  cpio.rs  main.rs  net_params.rs
mimic-apply/templates/: setup.start
mimic-gen/: Cargo.toml
mimic-gen/src/: main.rs
mimic-shared/: Cargo.toml
mimic-shared/src/: lib.rs
