[package]
name = "mimic-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
mimic-shared = { path = "../mimic-shared" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
inquire = "0.9"
rand = "0.9"
pwhash = "1.0"
